@@ -16,43 +16,46 @@
 /.la.locale 0 def
 /.la.name   1 def
 /lang.defaultnames [
-%  [ "ar" "\u064a\u0628\u0631\u0639" ]
-  [ "ar" "\ufef2\ufe91\ufeae\ufecb" ]
-  [ "bn" "Bengali" ]
-  [ "bs" "Bosanski" ]
-  [ "bg" "Български" ]
-  [ "cs" "Čeština" ]
+%  [ "ar"    "\u064a\u0628\u0631\u0639" ]
+  [ "ar"    "\ufef2\ufe91\ufeae\ufecb" ]
+  [ "bn"    "Bengali" ]
+  [ "bs"    "Bosanski" ]
+  [ "bg"    "Български" ]
+  [ "ca_ES" "Català" ]
+  [ "cs"    "Čeština" ]
   [ "cy_GB" "Cymraeg" ]
-  [ "da" "Dansk" ]
-  [ "en" "English" ]
-  [ "fr" "Français" ]
-  [ "de" "Deutsch" ]
-  [ "es" "Español" ]
-  [ "el" "Ελληνικά" ]
-  [ "fi" "Suomi" ]
-  [ "he" "תירבע" ]
-  [ "it" "Italiano" ]
-  [ "ja" "日本語" ]
-  [ "hi" "Hindi" ]
-  [ "hr" "Hrvatski" ]
-  [ "hu" "Magyar" ]
+  [ "da"    "Dansk" ]
+  [ "en_GB" "English (UK)" ]
+  [ "en_US" "English (US)" ]
+  [ "fr"    "Français" ]
+  [ "de"    "Deutsch" ]
+  [ "es"    "Español" ]
+  [ "el"    "Ελληνικά" ]
+  [ "fi"    "Suomi" ]
+  [ "he"    "תירבע" ]
+  [ "it"    "Italiano" ]
+  [ "ja"    "日本語" ]
+  [ "hi"    "Hindi" ]
+  [ "hr"    "Hrvatski" ]
+  [ "hu"    "Magyar" ]
   [ "km_KH" "Khmer" ]
-  [ "ko" "한글" ]
-  [ "lt" "Lietuvių" ]
-  [ "nl" "Nederlands" ]
-  [ "nb" "Norsk" ]
-  [ "pl" "Polski" ]
+  [ "ko"    "한글" ]
+  [ "lt"    "Lietuvių" ]
+  [ "nl"    "Nederlands" ]
+  [ "nb"    "Norsk" ]
+  [ "pl"    "Polski" ]
   [ "pt_PT" "Português" ]
   [ "pt_BR" "Português (Brasil)" ]
-  [ "pa" "Punjabi" ]
-  [ "ro" "Română" ]
-  [ "ru" "Русский" ]
-  [ "sk" "Slovenčina" ]
-  [ "sl" "Slovenščina" ]
-  [ "sr" "Cрпски" ]
-  [ "sv" "Svenska" ]
-  [ "tr" "Türkçe" ]
-  [ "uk" "Українська" ]
+  [ "pa"    "Punjabi" ]
+  [ "ro"    "Română" ]
+  [ "ru"    "Русский" ]
+  [ "sk"    "Slovenčina" ]
+  [ "sl"    "Slovenščina" ]
+  [ "sr"    "Cрпски" ]
+  [ "sv"    "Svenska" ]
+  [ "vi"    "Tiếng Việt" ]
+  [ "tr"    "Türkçe" ]
+  [ "uk"    "Українська" ]
   [ "zh_CN" "简体中文" ]
   [ "zh_TW" "繁體中文 (台灣)" ]
 ] def
