@@ -1,11 +1,13 @@
 bn
 bs
 bg
+ca_ES
 cs
 cy_GB
 da
 de
-en
+en_GB
+en_US
 es
 fr
 el
@@ -33,5 +35,6 @@ sl
 fi
 sv
 zh_TW
+vi
 tr
 uk
